--- a/index.qmd
+++ b/index.qmd
@@ -1,8 +1,12 @@
 ---
+title: "Minkun Kim"
+subtitle: <small><small> Researcher in Computational Finance</small></small>
 about:
-  template: jolla
+  template: trestles
+  image-width: 15em
+  image-shape: round
   id: about-block
-  image: "img/IMG_0800"
+  image: "img/IMG_0800.jpg"
   links:
     - icon: github
       text: Github
@@ -10,28 +14,43 @@ about:
     - icon: linkedin
       text: LinkedIn
       href: https://www.linkedin.com/in/minkun-kim-318403b8/
-    - icon: envelope
-      text: Email
-      href: "mailto:kimmk0810@gmail.com"  
+    
+format:
+  html:
+    page-layout: full
 ---
-
 ::: {#about-block}
-:::
-
 # Welcome to my website!
 
-I am Minkun the scholar of studying our stochastic world. Over years, I have dedicated my life to studying the cities, buildings, computings, mathematics and finance. On this website, I offer a glimpse into my vast body of knowledge, ongoing research, and publications.
+I am a scholar dedicated to understanding the complexities of our stochastic world. This website offers a window into my research, publications, and selected findings accumulated over years of academic and applied work. My research interests lie at the intersection of Bayesian computing, quantitative finance, data engineering, and energy markets. I also have a personal interest in data-driven urban planning. Here, you’ll find a selection of my published work, along with recent insights and ongoing developments from my current studies.
 
-My research interests span the entirety of Middle-earth, from the distant past to the present day. I am particularly passionate about the languages and mythologies of the Elves, Dwarves, and Men, and I have made significant contributions to the understanding of these subjects. My studies of the natural world have also been extensive, and I am an expert in the flora and fauna of Middle-earth. Additionally, I have been involved in many important historical events and offer valuable first-hand accounts and insights on the past.
-
-Not only am I a scholar, but I am also a mentor and teacher. Over the centuries, I have had the honor of working with many young wizards, passing on my knowledge and experience to the next generation. I have a particular interest in the education of hobbits, whom I see as having great potential despite their small size and simple lifestyle. My teaching style is engaging and accessible, and I encourage my students to think critically and creatively.
-
-On this website, you will find a selection of my published works, including scholarly articles, monographs, and translations. You will also find news and updates on my current research projects, as well as information on upcoming events and conferences where I will be speaking. I invite you to explore my website and learn more about my life's work as one of Middle-earth's greatest scholars and thinkers.
 Please feel free to [contact me](mailto:kimmk0810@gmail.com) if you have any questions or would like to discuss potential projects.
 
-```{=html}
-<div  style="margin: 30px; text-align: center;">
-<a class="btn btn-primary" href="https://www.marvinschmitt.com/blog/website-tutorial-quarto/" role="button" target="_blank" style="padding: 15px 30px;">View the tutorial for this template (+ download link)</a>
-</div>
-```
+---
+::::{.grid}
+::: {.g-col-12 .g-col-sm-6}
+#### Interests
+Quantitative Finance <br>
+Energy Market Risk Management <br>
+Nonparametric Bayesian Computing <br>
+Data-Driven Urban Design
+:::
+::: {.g-col-12 .g-col-sm-6}
+#### Education
+::: {.smaller}
+PhD in Computing<br>
+<small>Dublin City University, Ireland </small>
 
+MSc in Financial Mathematics<br>
+<small>University of ..., ...</small>
+
+H.Dip in Energy Economics<br>
+<small>University of Aberdeen, UK</small>
+
+BSc in Urban Engineering<br>
+<small>Hongik University, South Korea</small>
+:::
+:::
+::::
+
+:::
