Upload all project files

--- a/index.qmd
+++ b/index.qmd
@@ -46,7 +46,7 @@ Ph.D in Computing <br>
 M.Sc in Financial Mathematics <br>
 <small>University of York, UK </small>
 
-M.Sc in Sustainable Energy System <br>
+M.Sc in Sustainable Energy Finance <br>
 <small>Ruhr University Bochum, Germany </small>
 
 M.Sc in Data Analytics <br>
