--- a/whiteboard03/POST/project_4/index.qmd
+++ b/whiteboard03/POST/project_4/index.qmd
@@ -21,21 +21,27 @@ comments:
 ![ONLY ``Environmental objectives"..EU-Taxonomy does not address S or G objectives. It cares about what counts as an environmentally sustainable economic activity? A firm needs to answer what is its % of business (economic activities) that is really GREEN.](images/6objectives.png){width="1000"}
 
 EU-Taxonomy is developed to create a common language on what Green activity is...to reduce ``green washing" and improve comparability. Using EU-Taxonomy, a firm can determine what economic activities are ENVORONMENTALLY (not Social or Governance-wise) sustainable under the conditions:
+
 - Technical Screening Criteria (to see significance)
 - DNSH (not to significantly harm others)
 - Meeting Minimum Social Safeguards (to respect human right) 
 
 
+
 ![](images/taxonomy step.png){width="1000"}
 
 
-To meet the E-objectives - Climate, Water, Pollution, Biodiversity, Circular Econ -, a firm discloses `what % of their business` that is  <span style="color: green;">Green</span>...in terms of Revenue (what a firm does now), CAPEX (what a firm does for future), OPEX (how a firm supports its operation).  
+To meet the E-objectives - Climate, Water, Pollution, Biodiversity, Circular Econ -, a firm discloses `what % of their business` that is  <span style="color: green;">Green</span>...in terms of the 3 KPIs - Revenue (what a firm does now), CAPEX (what a firm does for future), OPEX (how a firm supports its operation).  
 
 
 
 # Case Study - EU Taxonomy Analysis
 
 The construction company *Gensler AG* is preparing its nonfinancial report in accordance with the **EU Taxonomy regulation 2020/852** (EU) for its most recent financial year. To prepare for the EU Taxonomy reporting process, the firm analyzes its **activities** according to its existing operating segments. The geographic segments reflect the operating focus of the business as well as its presence in key international regions and markets. 
+
+
+![Figure 1. EU Taxonomy Regulation is accompanied by several Delegated Acts as well as additional guidance.](images/act.png){width="1000"}
+
 
 
 
